# librvdec

./: CMakeLists.txt  LICENSE  README.md  config.h
include/rvdec/: decode.h  instruction.h  register.h
include/rvdec/insn_set_defs/: rv32m.def  rv64m.def
src/: CMakeLists.txt  decoder_hooks.h  decoder_hooks_def.h  riscv_decode.c  riscv_decode.cpp  riscv_insn.c  riscv_insn.cpp
src/include/: config.h  decoder_hooks.h  decoder_hooks_def.h  riscv_decode.h  riscv_decode.hpp  riscv_insn.h  riscv_insn.hpp
src/include/insn_set_defs/: rv32i.def  rv64i.def
test/: CMakeLists.txt  test_btype.cpp  test_compressed.cpp  test_itype.cpp  test_jtype.cpp  test_rtype.cpp  test_rv64i.cpp  test_stype.cpp  test_utype.cpp
